Prevent flickering

--- a/css/ravenous.css
+++ b/css/ravenous.css
@@ -237,8 +237,6 @@ button, .button {
         background-image:    -moz-linear-gradient(top, rgba(6,6,6,.1) 0%, transparent 100%);
         background-image:         linear-gradient(top, rgba(6,6,6,.1) 0%, transparent 100%);
         top: .136em;
-        -webkit-box-shadow: inset 0 -1px 0 rgba(255,255,255,.25), inset 0 2px 6px rgba(0,0,0,.25);
-        -moz-box-shadow:    inset 0 -1px 0 rgba(255,255,255,.25), inset 0 2px 6px rgba(0,0,0,.25);
         box-shadow:         inset 0 -1px 0 rgba(255,255,255,.25), inset 0 2px 6px rgba(0,0,0,.25);
     }
     button:after, .button:after {
@@ -297,13 +295,15 @@ header {
             z-index: 0;
             -webkit-transition: all .4s;
             transition:         all .4s;
-            -webkit-transform: translate3d(-0.2em,-1em,0);
-            transform:         translate3d(-0.2em,-1em,0);
-            -webkit-animation: soaring 7s linear infinite;
-            animation:         soaring 7s linear infinite;
+            -webkit-animation: soaring 8s linear infinite;
+            animation:         soaring 8s linear infinite;
             -webkit-animation-play-state: paused;
             animation-play-state:         paused;
         }
+            .wf-loading .logo:after {
+                -webkit-transform: translate3d(-0.2em,-1em,0);
+                transform:         translate3d(-0.2em,-1em,0);
+            }
             .wf-active .logo:after {
                 -webkit-transform: translate3d(0,-0.8em,0);
                 transform:         translate3d(0,-0.8em,0);
